--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,11 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+.vscode/
+
+.idea/
+
+cmake-build-debug/
+
+.DS_Store
